Add ability to filter permissions by least privilege or if hidden
